--- a/post.html
+++ b/post.html
@@ -72,7 +72,7 @@
     <div class="container">
         <!-- 文章1 -->
         <div class="article">
-            <h2 class="article-title"><a href="text/new_file.html">网络技术对社会影响案例与网安从业者的社会责任总结</a></h2>
+            <h2 class="article-title"><a href="new_file.html">网络技术对社会影响案例与网安从业者的社会责任总结</a></h2>
             <p class="article-date">发布日期：2024-11-03</p>
             <div class="article-content">
                 <p>网络安全行业发展面临的挑战与发展趋势</p>
@@ -80,7 +80,7 @@
         </div>
         <!-- 文章2 -->
         <div class="article">
-            <h2 class="article-title"><a href="./text/text1.html">网络安全前沿技术与产品总结</a></h2>
+            <h2 class="article-title"><a href="text1.html">网络安全前沿技术与产品总结</a></h2>
             <p class="article-date">发布日期：2024-10-03</p>
             <div class="article-content">
                 <p>互联网技术与网络安全技术</p>
