--- a/firstweb.html
+++ b/firstweb.html
@@ -96,7 +96,7 @@
 		<p class="p1">Personal Weekly News</p>
 		<hr size="3" color="#000080" width="100%"/>
 		<div class="topnav">
-		  <a href="./照片集/photograph.html">摄影作品展示</a>
+		  <a href="./photograph.html">摄影作品展示</a>
 		  <a href="./liuyan.html">你的留言</a>
 		  <a href="./personal block.html">博客文章</a>
 		</div>
